--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "于博"
-  avatar           : "images/android-chrome-512x512.png"
+  avatar           : "images/boyu.png"
   bio              : "吉林大学"
   location         : "吉林 长春"
   employer         : #"Hefei General Machinery Research Institute"
