--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,19 @@
 # main links links
 main:
   - title: "简介"
-    url: "/zh-cn/#about-me"
+    url: "/about.html/#about-me"
 
   - title: "学历"
-    url: "/zh-cn/#-xl"
+    url: "/about.html/#-xl"
 
   - title: "论文专利"
-    url: "/zh-cn/#-lwzl"
+    url: "/about.html/#-lwzl"
 
   - title: "荣誉奖项"
-    url: "/zh-cn/#-ryjx"
+    url: "/about.html/#-ryjx"
 
   - title: "学术会议"
-    url: "/zh-cn/#-xshy"
+    url: "/about.html/#-xshy"
 
   - title: "工作实习"
-    url: "/zh-cn/#-gzsx"
+    url: "/about.html/#-gzsx"
